documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.VB

    Public Declare Function L43_SchedBuild Lib "L43W32.DLL" Alias "_L43_SchedBuild@24" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedCall Lib "L43W32.DLL" Alias "_L43_SchedCall@16" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedEntry Lib "L43W32.DLL" Alias "_L43_SchedEntry@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedGap Lib "L43W32.DLL" Alias "_L43_SchedGap@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedGapFixed Lib "L43W32.DLL" Alias "_L43_SchedGapFixed@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedGapList Lib "L43W32.DLL" Alias "_L43_SchedGapList@16" (ByVal gapval As UInt16, ByVal listaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedHalt Lib "L43W32.DLL" Alias "_L43_SchedHalt@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedInt Lib "L43W32.DLL" Alias "_L43_SchedInt@16" (ByVal condition As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedMsg Lib "L43W32.DLL" Alias "_L43_SchedMsg@12" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedMsgEx Lib "L43W32.DLL" Alias "_L43_SchedMsgEx@16" (ByVal msgaddr As UInt32, ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedPause Lib "L43W32.DLL" Alias "_L43_SchedPause@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedPulse Lib "L43W32.DLL" Alias "_L43_SchedPulse@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedRestart Lib "L43W32.DLL" Alias "_L43_SchedRestart@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedReturn Lib "L43W32.DLL" Alias "_L43_SchedReturn@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqConfig Lib "L43W32.DLL" Alias "_L43_SeqConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqInterval Lib "L43W32.DLL" Alias "_L43_SeqInterval@12" (ByVal interval As Int32, ByVal mode As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqIntFrequency Lib "L43W32.DLL" Alias "_L43_SeqIntFrequency@8" (ByVal intfreq As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_SeqIsRunning Lib "L43W32.DLL" Alias "_L43_SeqIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqRd Lib "L43W32.DLL" Alias "_L43_SeqRd@8" (ByRef buf As SEQRECORD, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_SeqStatus Lib "L43W32.DLL" Alias "_L43_SeqStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_TimerClear Lib "L43W32.DLL" Alias "_L43_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function L43_TimerRd Lib "L43W32.DLL" Alias "_L43_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_TimerResolution Lib "L43W32.DLL" Alias "_L43_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Ch717Status Lib "L43W32.DLL" Alias "_L43_Ch717Status@12" (ByRef buf As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_Get717ChanCount Lib "L43W32.DLL" Alias "_L43_Get717ChanCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_Is717BiPhaseChan Lib "L43W32.DLL" Alias "_L43_Is717BiPhaseChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Is717Chan Lib "L43W32.DLL" Alias "_L43_Is717Chan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Is717RcvChan Lib "L43W32.DLL" Alias "_L43_Is717RcvChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Is717XmtChan Lib "L43W32.DLL" Alias "_L43_Is717XmtChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmBlkRd Lib "L43W32.DLL" Alias "_L43_SubFrmBlkRd@16" (ByRef databuf As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmBlkWr Lib "L43W32.DLL" Alias "_L43_SubFrmBlkWr@16" (ByRef databuf As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmStatus Lib "L43W32.DLL" Alias "_L43_SubFrmStatus@16" (ByRef buf As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmWordConfig Lib "L43W32.DLL" Alias "_L43_SubFrmWordConfig@20" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmWordRd Lib "L43W32.DLL" Alias "_L43_SubFrmWordRd@20" (ByRef value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmWordWr Lib "L43W32.DLL" Alias "_L43_SubFrmWordWr@20" (ByVal value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmConfig Lib "L43W32.DLL" Alias "_L43_SuperFrmConfig@16" (ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmCounterPos Lib "L43W32.DLL" Alias "_L43_SuperFrmCounterPos@16" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmDefine Lib "L43W32.DLL" Alias "_L43_SuperFrmDefine@16" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_SuperFrmWordRd Lib "L43W32.DLL" Alias "_L43_SuperFrmWordRd@20" (ByRef value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmWordWr Lib "L43W32.DLL" Alias "_L43_SuperFrmWordWr@20" (ByVal value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmWordConfig Lib "L43W32.DLL" Alias "_L43_SuperFrmWordConfig@20" (ByVal configval As UInt32, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SyncTest Lib "L43W32.DLL" Alias "_L43_SyncTest@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SyncValRd Lib "L43W32.DLL" Alias "_L43_SyncValRd@24" (ByRef syncword1 As Int32, ByRef syncword2 As Int32, ByRef syncword3 As Int32, ByRef syncword4 As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SyncValWr Lib "L43W32.DLL" Alias "_L43_SyncValWr@24" (ByVal syncword1 As Int32, ByVal syncword2 As Int32, ByVal syncword3 As Int32, ByVal syncword4 As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_AddrDSP Lib "L43W32.DLL" Alias "_L43_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L43_AddrHost Lib "L43W32.DLL" Alias "_L43_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L43_AsciiToMant Lib "L43W32.DLL" Alias "_L43_AsciiToMant@12" (ByRef str As String, ByRef mant As UInt32, ByRef exp As Int32) As Int32
    Public Declare Function L43_CardBoot Lib "L43W32.DLL" Alias "_L43_CardBoot@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardCloseAll Lib "L43W32.DLL" Alias "_L43_CardCloseAll@0" () As Int32
    Public Declare Function L43_CardGetInfo Lib "L43W32.DLL" Alias "_L43_CardGetInfo@8" (ByVal infotype As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_CardGetInfoEx Lib "L43W32.DLL" Alias "_L43_CardGetInfoEx@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CardInit Lib "L43W32.DLL" Alias "_L43_CardInit@0" ()
    Public Declare Function L43_CardIsRunning Lib "L43W32.DLL" Alias "_L43_CardIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardNop Lib "L43W32.DLL" Alias "_L43_CardNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardOpenEx Lib "L43W32.DLL" Alias "_L43_CardOpenEx@8" (ByRef cardname As String, ByVal cardnum As Int32) As UInt32
    Public Declare Function L43_CardOpenExx Lib "L43W32.DLL" Alias "_L43_CardOpenExx@16" (ByRef cardname As String, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Sub L43_CardResetEx Lib "L43W32.DLL" Alias "_L43_CardResetEx@4" (ByVal handleval As UInt32)
    Public Declare Function L43_CardTest Lib "L43W32.DLL" Alias "_L43_CardTest@8" (ByVal level As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardTest0 Lib "L43W32.DLL" Alias "_L43_CardTest0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardTest1 Lib "L43W32.DLL" Alias "_L43_CardTest1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardTest2 Lib "L43W32.DLL" Alias "_L43_CardTest2@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardTest3 Lib "L43W32.DLL" Alias "_L43_CardTest3@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CFGRdL Lib "L43W32.DLL" Alias "_L43_CFGRdL@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_CFGWrL Lib "L43W32.DLL" Alias "_L43_CFGWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_Ch717Config Lib "L43W32.DLL" Alias "_L43_Ch717Config@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Ch717Create Lib "L43W32.DLL" Alias "_L43_Ch717Create@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_Ch717Reset Lib "L43W32.DLL" Alias "_L43_Ch717Reset@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ChConfigEx Lib "L43W32.DLL" Alias "_L43_ChConfigEx@16" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ChDARClr Lib "L43W32.DLL" Alias "_L43_ChDARClr@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ChDARGet Lib "L43W32.DLL" Alias "_L43_ChDARGet@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ChDARRdL Lib "L43W32.DLL" Alias "_L43_ChDARRdL@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
